tests/snapshots/run_wpt_conformance__coreml_layerNormalization_float16_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 4D tensor all options, coreml
 layer_normalization :: layerNormalization float16 4D tensor all options: index 0: actual=-0.8779297 expected=-15.484375 ulp=4280 tolerance=30
  inputs: layerNormInput: [-35.5, 54.75, 19.65625, -15.8828125, 65.5, 25.8125, 97.5625, -8.0546875, 62.9375, -48.90625, 91.9375, 46.65625, -74.875, 30.125, 26.125, 59.3125, -60.375, 18.5625, -88.0625, -26.5625, 70.8125, 9.109375, 56.65625, 21.78125]; layerNormBias: [-8.7109375, -7.64453125, 4.9375, -2.1875, -4.06640625, -6.8359375] (constant); layerNormScale: [7.71484375, 1.7373046875, 9.140625, 5.7578125, -2.8203125, -0.6865234375] (constant)
  expected layerNormOutput: [-15.484375, -5.6289063, 8.296875, -14.296875, -5.640625, 7.1132813, 0.7753906, -8.3515625, 11.28125, -22.5 ...] (len=24)
  actual layerNormOutput: [-0.8779297, 1.1601563, 0.36743164, -0.7236328, 1.1533203, 0.23815918, 1.2294922, -0.40478516, 0.69384766, -1.7880859 ...] (len=24)
  expected layerNormOutput full nd:
[-15.484375, -5.6289063, 8.296875, -14.296875, -5.640625, 7.1132813, 0.7753906, -8.3515625, 11.28125, -22.5, ...] (len=24, shape=[2, 1, 4, 3])
  actual layerNormOutput full nd:
[-0.8779297, 1.1601563, 0.36743164, -0.7236328, 1.1533203, 0.23815918, 1.2294922, -0.40478516, 0.69384766, -1.7880859, ...] (len=24, shape=[2, 1, 4, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[2, 1, 4, 3];
  }

  consts {
    operand_0: f16[2, 3, 1] @bytes([91, 200, 165, 199, 240, 68, 96, 192, 17, 196, 214, 198]);
    operand_2: f16[2, 3, 1] @bytes([183, 71, 243, 62, 146, 72, 194, 69, 164, 193, 126, 185]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=[0, 3, 1], bias=0, epsilon=0.0001, label="", scale=2);
  }

  outputs { layerNormOutput; }
}
