tests/snapshots/run_wpt_conformance__coreml_layerNormalization_float16_4D_tensor_options_epsilon.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 4D tensor options.epsilon, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML layer_norm with empty axes requires special handling (not yet implemented)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[2, 1, 4, 3];
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.0001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
