tests/snapshots/run_wpt_conformance__coreml_layerNormalization_float16_4D_tensor_options_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float16 4D tensor options.scale, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML layer_norm with empty axes requires special handling (not yet implemented)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f16[2, 1, 4, 3];
  }

  consts {
    operand_1: f16[1, 4, 3] @bytes([165, 195, 116, 197, 108, 57, 7, 196, 142, 195, 170, 200, 47, 71, 6, 62, 62, 66, 44, 56, 88, 65, 37, 195]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.00001, label="", scale=1);
  }

  outputs { layerNormOutput; }
}
