tests/snapshots/run_wpt_conformance__coreml_layerNormalization_float32_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 2D tensor default options, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML layer_norm with empty axes requires special handling (not yet implemented)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[4, 6];
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { layerNormOutput; }
}
