tests/snapshots/run_wpt_conformance__coreml_layerNormalization_float32_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 4D tensor all options, coreml
 layer_normalization :: layerNormalization float32 4D tensor all options: index 0: actual=-0.87823045 expected=-15.487035 ulp=35059503 tolerance=16
  inputs: layerNormInput: [-35.51446533203125, 54.735408782958984, 19.659019470214844, -15.882678031921388, 65.48657989501953, 25.818492889404297, 97.5530242919922, -8.057161331176758, 62.9412956237793, -48.91555404663086, 91.90644073486328, 46.67098617553711, -74.85331726074219, 30.126361846923828, 26.13089370727539, 59.30270767211914, -60.36199569702149, 18.55615234375, -88.03730773925781, -26.5667724609375, 70.81292724609375, 9.10561180114746, 56.66746139526367, 21.78444480895996]; layerNormBias: [-8.710672378540039, -7.642981052398682, 4.937538146972656, -2.1876745223999023, -4.067612648010254, -6.836254596710205] (constant); layerNormScale: [7.715926647186279, 1.7371079921722412, 9.13965129852295, 5.758823394775391, -2.8198351860046387, -0.6866958141326904] (constant)
  expected layerNormOutput: [-15.487035, -5.628696, 8.296878, -14.294686, -5.6391926, 7.1160836, 0.7769554, -8.346452, 11.279659, -22.506289 ...] (len=24)
  actual layerNormOutput: [-0.87823045, 1.1595623, 0.36755666, -0.7236998, 1.1535197, 0.23836195, 1.2296162, -0.40496638, 0.6939128, -1.7879404 ...] (len=24)
  expected layerNormOutput full nd:
[-15.487035, -5.628696, 8.296878, -14.294686, -5.6391926, 7.1160836, 0.7769554, -8.346452, 11.279659, -22.506289, ...] (len=24, shape=[2, 1, 4, 3])
  actual layerNormOutput full nd:
[-0.87823045, 1.1595623, 0.36755666, -0.7236998, 1.1535197, 0.23836195, 1.2296162, -0.40496638, 0.6939128, -1.7879404, ...] (len=24, shape=[2, 1, 4, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[2, 1, 4, 3];
  }

  consts {
    operand_0: f32[2, 3, 1] @bytes([234, 94, 11, 193, 77, 147, 244, 192, 80, 0, 158, 64, 220, 2, 12, 192, 226, 41, 130, 192, 153, 194, 218, 192]);
    operand_2: f32[2, 3, 1] @bytes([223, 232, 246, 64, 142, 89, 222, 63, 3, 60, 18, 65, 72, 72, 184, 64, 46, 120, 52, 192, 76, 203, 47, 191]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=[0, 3, 1], bias=0, epsilon=0.0001, label="", scale=2);
  }

  outputs { layerNormOutput; }
}
